Formatted results pg, started new implementation for search instance show

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -6,7 +6,7 @@
       nil,
       placeholder: "Search"
   ) %>
-  <%= text_field_tag :zipcode, nil, placeholder: "Zip code" %>
+  <%= text_field_tag :location, nil, placeholder: "Enter a Location" %>
   <%= submit_tag "Search" %>
 
 <% end %>
