--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -1,12 +1,18 @@
+<h1>Did you mean...</h1>
 <% @restaurants.each do |restaurant| %>
-
   <% if restaurant.is_a?(Restaurant) %>
     <h4><%= link_to restaurant.name, restaurant %></h4>
-    <p><%= restaurant = restaurant.address.split("~") %></p>
+    <p>
+      <% restaurant.address.split("~").each do |address_line| %>
+      <%= address_line %><br />
+      <% end %>
+    </p>
   <% else %>
     <%= link_to restaurant["name"], new_restaurant_path(address: restaurant["location"]["formattedAddress"], name: restaurant["name"]), foursquare_id: restaurant["id"], method: :post %>
-    <% restaurant["location"]["formattedAddress"].each do |address_line| %>
-    <%= address_line %><br />
-    <% end %>
+    <p>
+      <% restaurant["location"]["formattedAddress"].each do |address_line| %>
+      <%= address_line %><br />
+      <% end %>
+    </p>
   <% end %>
 <% end %>
