--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,12 +1,7 @@
 <h1>Palatable</h1>
 
-<%= form_tag '/search', method: :post do %>
-  <%= text_field_tag(
-      :search,
-      nil,
-      placeholder: "Search"
-  ) %>
-  <%= text_field_tag :location, nil, placeholder: "Enter a Location" %>
-  <%= submit_tag "Search" %>
-
+<%= form_for @search do |f| %>
+  <%= f.text_field :search, placeholder: 'Search' %>
+  <%= f.text_field :location, placeholder: 'ZIP or Address' %>
+  <%= f.submit 'Search' %>
 <% end %>
