--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -7,7 +7,8 @@
 </div>
 
 <div id="results_container">
-<h1 id="did_you_mean">Did you mean...</h1>
+<h1 id="did_you_mean">🕵️‍♀️ Did you mean... 🕵️</h1>
+<div id="results_inner_container">
   <% @restaurants.each do |restaurant| %>
     <div class="result_card">
       <% if restaurant.is_a?(Restaurant) %>
@@ -25,6 +26,7 @@
         <% end %>
       </p>
     <% end %>
-  </div>
+    </div>
   <% end %>
+  </div>
 </div>
