--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -1,4 +1,4 @@
-#search_form {
+ #search_form {
   @include outer-container;
 }
 
@@ -25,7 +25,29 @@
   @include omega(3n);
 }
 
+.result_card p {
+  font-family: $monotype;
+  font-size: .7em;
+  color: #888;
+  text-transform: uppercase;
+  letter-spacing: .5px;
+}
+
+.result_card h4 a {
+  font-family: $serif-type;
+  font-size: 1.5em;
+  margin: .5em 0;
+  color: #222;
+  text-decoration: none;
+}
+
+.result_card h4 a:hover {
+  color: rgba(254,86,25,1);
+  transition: color .3s;
+}
+
 #did_you_mean {
+  font-family: $serif-type;
   @include fill-parent();
   text-align: center;
 }
