--- a/app/views/restaurants/dummy_show.html.erb
+++ b/app/views/restaurants/dummy_show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @restaurant.name %></h1>
-<p><% @reformatted_address.each do |address_line| %>
+<h1><%= session[:dummy_restaurant].name %></h1>
+<p><% session[:reformatted_address].each do |address_line| %>
   <%= address_line %><br>
   <% end %>
 </p>
