CRUD some checks if user owns review

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -10,3 +10,9 @@
   Environment Rating: <%= @review.environment_rating %>
   <br>
     Service Rating: <%= @review.service_rating %>
+
+<% if @owned %>
+    <%= form_tag edit_review_path, method: 'get' do %>
+      <%= submit_tag "Edit this Review" %>
+    <% end %>
+<% end %>
