--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -17,3 +17,7 @@
 
     <%= f.submit %><br>
 <% end %>
+
+<%= form_tag review_path, method: "delete" do %>
+  <%= submit_tag "Delete this Review" %>
+<% end %>
