--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,7 +1,7 @@
 <div id="search_form">
-  <%= form_for @search do |f| %>
-    <%= f.text_field :search, id: 'search_field' %>
-    <%= f.text_field :location, id: 'location_field'%>
+  <%= form_for Search.new do |f| %>
+    <%= f.text_field :search, id: 'search_field', placeholder: "Search" %>
+    <%= f.text_field :location, id: 'location_field', placeholder: "Zip or Address"%>
     <%= f.submit 'Search Again' %>
   <% end %>
 </div>
