--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -4,7 +4,7 @@
     <h4><%= link_to restaurant.name, restaurant %></h4>
     <p><%= restaurant = restaurant.address.split("~") %></p>
   <% else %>
-    <%= link_to restaurant["name"], new_restaurant_path(address: restaurant["location"]["formattedAddress"], name: restaurant["name"]), foursquare_id: restaurant["id"], method: :post %>
+    <%= link_to restaurant["name"], new_restaurant_path(address: restaurant["location"]["formattedAddress"], name: restaurant["name"], foursquare_id: restaurant["id"]), method: :post %>
     <% restaurant["location"]["formattedAddress"].each do |address_line| %>
     <%= address_line %><br />
     <% end %>
