--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "bourbon";
 @import "neat";
 @import "typography";
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css');
 @import "results";
+@import "restaurants";
+
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
