--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -4,4 +4,16 @@
   color: white;
   text-align: center;
   font-family: $serif-type;
+
+  background-size: 100%;
+  font-size: 2em;
+  color: white;
+  text-align: center;
+  font-family: "RomanaBT-Bold", "Georgia", serif;
+  position: relative;
+  top: 0;
+  left: 0;
+  float: left;
+  margin: -.25em 0 1em -.25em;
+  width: 100vw;
 }
