--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -4,6 +4,7 @@
   color: white;
   text-align: center;
   font-family: $serif-type;
+  height: 40vh;
 
   background-size: 100%;
   font-size: 2em;
@@ -16,4 +17,16 @@
   float: left;
   margin: -.25em 0 1em -.25em;
   width: 100vw;
+  
+}
+
+.header h1 {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+}
+
+i a {
+  color: black;
 }
