Refactor review ratings method, edit did_you_mean

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div id="results_container">
-<h1 id="did_you_mean">🕵️‍♀️ Did you mean... 🕵️</h1>
+<h1 id="did_you_mean">Searching for <%= @search.search%> near <%= @search.location%>...</h1>
 <div id="results_inner_container">
   <% @restaurants.each do |restaurant| %>
     <div class="result_card">
