--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -26,7 +26,7 @@
 }
 
 .result_card p {
-  font-family: $monotype;
+  font-family: $monospace-type;
   font-size: .7em;
   color: #888;
   text-transform: uppercase;
