--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -4,4 +4,4 @@
 @font-face {font-family: 'RomanaBT-Bold';src: url('webfonts/2CB973_0_0.eot');src: url('webfonts/2CB973_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2CB973_0_0.woff2') format('woff2'),url('webfonts/2CB973_0_0.woff') format('woff'),url('webfonts/2CB973_0_0.ttf') format('truetype');}
 
 $serif-type: 'RomanaBT-Bold', 'Georgia', serif;
-$monotype: 'Roboto Mono', 'Insoncolata', 'Monaco', 'Courier New', monospace;
+$monospace-type: 'Roboto Mono', 'Insoncolata', 'Monaco', 'Courier New', monospace;
