--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -15,4 +15,7 @@
     <%= form_tag edit_review_path, method: 'get' do %>
       <%= submit_tag "Edit this Review" %>
     <% end %>
+    <%= form_tag review_path, method: 'delete' do %>
+      <%= submit_tag "Delete this Review" %>
+    <% end %>
 <% end %>
