--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,12 @@
-Hello show!!!
+<h1> Welcome <%= @user.name %>! </h1>
+
+<p>
+  <% @user.reviews.each do |review| %>
+  <h3><%= review.restaurant_name %> <br></h3>
+  <%= review.food_rating %><br>
+  <%= review.service_rating %><br>
+  <%= review.environment_rating %><br>
+  <%= review.content %><br>
+  <%= link_to "Edit this review", review %>
+<% end %>
+</p><br><br>
