add title field to review forms

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,6 +1,8 @@
 
     Restaurant: <%= @review.restaurant.name %>
   <br>
+    Title: <%= @review.title %>
+  <br>
     Review by: <%= @review.user.name %>
   <br>
     Content: <%= @review.content %>
