--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New Review</h1>
 <%= form_for @review do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  <br>
     <%= f.label :content %>
     <%= f.text_area :content %>
   <br>
