Fixed update attributes conditional

--- a/app/views/restaurants/dummy_show.html.erb
+++ b/app/views/restaurants/dummy_show.html.erb
@@ -1,6 +1,6 @@
 <style>
   .header {
-    background-image: url("<%= session[:dummy_restaurant].photo %>");
+    background-image: url('<%= session[:dummy_restaurant].photo %>');
   }
 </style>
 
