--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,25 +1,20 @@
 .header {
-  background-size: 100%;
-  font-size: 2em;
-  color: white;
-  text-align: center;
-  font-family: $serif-type;
-  height: 40vh;
-
-  background-size: 100%;
-  font-size: 2em;
-  color: white;
-  text-align: center;
-  font-family: "RomanaBT-Bold", "Georgia", serif;
   position: relative;
+  background-size: 100%;
+  background-position: center;
+  margin: -.5em 0 1em -.5em;
   top: 0;
   left: 0;
   float: left;
-  margin: -.25em 0 1em -.25em;
   width: 100vw;
+  height: 40vh;
 }
 
 .header h1 {
+  font-family: $serif-type;
+  font-size: 3em;
+  color: white;
+  text-align: center;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
