--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Palatable</h1>
 
 <%= form_for @search do |f| %>
-  <%= f.text_field :search, placeholder: 'Search' %>
-  <%= f.text_field :location, placeholder: 'ZIP or Address' %>
+  <%= f.text_field :search, placeholder: 'Search', required: true %>
+  <%= f.text_field :location, placeholder: 'ZIP or Address', required: true %>
   <%= f.submit 'Search' %>
 <% end %>
