--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<h3>
+<%= link_to "Search Again", root_path%>
+</h3>
+
 <h1> Welcome <%= @user.name %>! </h1>
 <%= link_to "Edit My Profile", edit_user_path(@user)%>
 
