--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <%= form_for @search do |f| %>
-  <%= f.text_field :search, placeholder: 'Search', required: true %>
+  <%= f.text_field :search, placeholder: 'Search' %>
   <%= f.text_field :location, placeholder: 'ZIP or Address', required: true %>
   <%= f.submit 'Search' %>
 <% end %>
