--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,19 +1,19 @@
 <h1>New Review</h1>
 <%= form_for @review do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.label :title  %>
+    <%= f.text_field :title, required: true %>
   <br>
     <%= f.label :content %>
-    <%= f.text_area :content %>
+    <%= f.text_area :content, required: true %>
   <br>
     <%= f.label :food_rating %>
-    <%= f.select :food_rating, options_for_select( (1..5).to_a, 5)%>
+    <%= f.select :food_rating, options_for_select( (1..5).to_a, ""), required: true, include_blank: true%>
   <br>
   <%= f.label :environment_rating %>
-  <%= f.select :environment_rating, options_for_select( (1..5).to_a, 5)%>
+  <%= f.select :environment_rating, options_for_select( (1..5).to_a, ""), required: true, include_blank: true %>
   <br>
     <%= f.label :service_rating %>
-    <%= f.select :service_rating, options_for_select( (1..5).to_a, 5)%>
+    <%= f.select :service_rating, options_for_select( (1..5).to_a, ""), required: true, include_blank: true%>
   <br>
     <%= f.hidden_field :user_id, value: @user.id%>
     <%= f.hidden_field :restaurant_id, value: @restaurant.id %>
