--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -33,33 +33,72 @@
   <% end %>
 </div>
 
-<% if @user && @user_review %>
-  <%= link_to 'Edit your review', edit_review_path(@user_review.id) %>
-<% else %>
+<% if @user && !@user_review %>
   <%= link_to 'Create a new review', new_review_path(@restaurant.id) %>
 <% end %>
 
-<h4 id="review_list_header">Reviews list</h4>
-<% @restaurant.reviews.each do |review| %>
-<div class="review">
-  <div class="user-info">
-    <%= link_to review.user.name, review.user %>
-  </div>
-  <section class="review-content">
-      <section class="ratings">
-        <p class="food-rating">
-          <%= review.food_rating %> — FOOD
-        </p>
-        <p class="service-rating">
-          <%= review.service_rating %> — SERVICE
-        </p>
-        <p class="environment-rating">
-          <%= review.environment_rating %> — ENVIRONMENT
-        </p>
-      </section>
-      <section class="review-text">
-        <%= review.content %>
-    </section>
-    </section>
-  </div>
+<% unless @restaurant.reviews.empty? %>
+
+  <h3 id="review_list_header">Review List</h3>
+
+  <% if @user && @user_review %>
+      <h4 id="review_list_header">Your Review, <%= link_to @user.name, @user %></h4>
+        <%= button_to 'Edit your review', edit_review_path(@user_review.id), method: 'get' %>
+
+    <div class="review">
+      <div class="user-info">
+        <%= link_to @user.name, @user %> said:
+      </div>
+      <section class="review-content">
+          <section class="review-title">
+            <%= @user_review.title %>
+          </section>
+          <section class="ratings">
+            <p class="food-rating">
+              <%= @user_review .food_rating %> — FOOD
+            </p>
+            <p class="service-rating">
+              <%= @user_review .service_rating %> — SERVICE
+            </p>
+            <p class="environment-rating">
+              <%= @user_review.environment_rating %> — ENVIRONMENT
+            </p>
+          </section>
+          <section class="review-text">
+            <%= @user_review.content %>
+        </section>
+        </section>
+      </div>
+      <br>
+  <% end %>
+
+  <% @restaurant.reviews.each do |review| %>
+  <% unless review.user.id == @user.id %>
+    <div class="review">
+      <div class="user-info">
+        <%= link_to review.user.name, review.user %> said:
+      </div>
+      <section class="review-content">
+          <section class="review-title">
+            <%= review.title %>
+          </section>
+          <section class="ratings">
+            <p class="food-rating">
+              <%= review.food_rating %> — FOOD
+            </p>
+            <p class="service-rating">
+              <%= review.service_rating %> — SERVICE
+            </p>
+            <p class="environment-rating">
+              <%= review.environment_rating %> — ENVIRONMENT
+            </p>
+          </section>
+          <section class="review-text">
+            <%= review.content %>
+        </section>
+        </section>
+      </div>
+    <% end %>
+    <br>
+  <% end %>
 <% end %>
