--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+    <div id="nav">
+      <div id="top-logo">
+        <%= link_to "palatable", root_path, class: 'logo' %>
+      </div>
+      <div class="session_controls">
+        <%= button_to "Login", login_path if !logged_in? %>
+        <%= button_to "Logout", logout_path, method: :post if logged_in? %>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
