--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
       </div>
       <div class="session_controls">
         <%= button_to "Login", login_path if !logged_in? %>
-        <%= button_to "Logout", logout_path, method: :post if logged_in? %>
+        <%= link_to "Profile", @user, class: 'nav_elements' if logged_in? %>
+        <%= button_to "Logout", logout_path, method: :post, class: 'nav_elements' if logged_in? %>
       </div>
     </div>
     <%= yield %>
